--- a/项目部署文档.md
+++ b/项目部署文档.md
@@ -186,31 +186,95 @@ postman post请求分词测试：`http://服务器IP地址:9200/_analyze`
 结果
 
 ```shell
-{
-    "tokens": [
-        {
-            "token": "我",
-            "start_offset": 0,
-            "end_offset": 1,
-            "type": "CN_CHAR",
-            "position": 0
-        },
-        {
-            "token": "爱",
-            "start_offset": 1,
-            "end_offset": 2,
-            "type": "CN_CHAR",
-            "position": 1
-        },
-        {
-            "token": "技术",
-            "start_offset": 2,
-            "end_offset": 4,
-            "type": "CN_WORD",
-            "position": 2
-        }
-    ]
+
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.web.bind.annotation.*;
+
+import java.text.SimpleDateFormat;
+import java.util.Date;
+import java.util.Map;
+
+@RestController
+@RequestMapping("/labs")
+public class LabController {
+
+    @Autowired
+    private LabService labService;
+
+    /**
+     * HTTP GET 接口：按时间范围和现场情况统计地域下的问题类型数量
+     *
+     * 请求示例：
+     * GET /labs/stats?start=2025-04-01&end=2025-04-30&condition=正常
+     *
+     * 参数说明：
+     * - start: 查询开始时间，格式 yyyy-MM-dd
+     * - end: 查询结束时间，格式 yyyy-MM-dd
+     * - condition: 预期的现场情况，如："正常"
+     */
+    @GetMapping("/stats")
+    public Map<String, Map<String, Integer>> getNonConformingStats(
+            @RequestParam String start,
+            @RequestParam String end,
+            @RequestParam String condition) throws Exception {
+
+        // 时间格式转换器
+        SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
+
+        // 将字符串参数转为 Date 类型
+        Date startTime = sdf.parse(start);
+        Date endTime = sdf.parse(end);
+
+        // 调用 Service 获取统计数据
+        return labService.countNonConformingByRegionAndIssueType(startTime, endTime, condition);
+    }
 }
+
+
+import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+
+import java.util.*;
+@Service
+public class LabServiceImpl implements LabService {
+
+    @Autowired
+    private LabMapper labMapper;
+
+    @Override
+    public Map<String, Map<String, Integer>> countNonConformingByRegionAndIssueType() {
+        // 查询所有现场情况为“不符合”的数据
+        QueryWrapper<Lab> wrapper = new QueryWrapper<>();
+        wrapper.select(Lab::getRegion, Lab::getIssueType)
+               .eq("site_condition", "不符合");
+
+        List<Lab> labs = labMapper.selectList(wrapper);
+
+        // 构建返回结果：地域 -> 问题类型 -> 不符合数量
+        Map<String, Map<String, Integer>> result = new HashMap<>();
+
+        for (Lab lab : labs) {
+            String region = lab.getRegion();
+            String issueType = lab.getIssueType();
+
+            // 如果地域不存在，则创建新Map
+            result.computeIfAbsent(region, k -> new HashMap<>());
+
+            // 统计该问题类型的数量
+            result.get(region).compute(issueType, (k, v) -> v == null ? 1 : v + 1);
+        }
+
+        return result;
+    }
+}
+
+
+
+
+
+
 ```
 
 ## 7.安装MaxWell
